--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "survey-creator-knockout": "^1.9.46",
     "vue": "^3.2.13"
   },
   "devDependencies": {
